// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI Integration ('Output Mode: Flat With Secret') > should generate expected files > generate-output-with-secret/output/stacks.yml 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: namespace
    thaitype.dev/kubricate/resource-id: namespace
  annotations:
    thaitype.dev/kubricate/stack-name: NamespaceStack
    thaitype.dev/kubricate/resource-hash: 446fa07a363d589aef6d97e7338f6d74f9fd397d9cec5209be5fd4b2b26bd3e0
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: frontend
    thaitype.dev/kubricate/resource-id: deployment
  annotations:
    thaitype.dev/kubricate/stack-name: SimpleAppStack
    thaitype.dev/kubricate/resource-hash: aab350338823a3720911def199014d974a8acef38fcead6a8155d9cd35f459fb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: my-app
          name: my-app
          ports:
            - containerPort: 80
          env:
            - name: API_KEY
              valueFrom:
                secretKeyRef:
                  name: secret-application
                  key: my_app_key
            - name: API_KEY_2
              valueFrom:
                secretKeyRef:
                  name: secret-application
                  key: my_app_key_2
      imagePullSecrets:
        - name: secret-application-provider
---

apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: frontend
    thaitype.dev/kubricate/resource-id: service
  annotations:
    thaitype.dev/kubricate/stack-name: SimpleAppStack
    thaitype.dev/kubricate/resource-hash: 63f2925ed6296dd89f7f35c62538d6e579413cb40699fa321fb8c64a953f8aee
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Flat') > should generate expected files > generate-output-flat/output/stacks.yml 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: namespace
    thaitype.dev/kubricate/resource-id: namespace
  annotations:
    thaitype.dev/kubricate/stack-name: NamespaceStack
    thaitype.dev/kubricate/resource-hash: 446fa07a363d589aef6d97e7338f6d74f9fd397d9cec5209be5fd4b2b26bd3e0
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: frontend
    thaitype.dev/kubricate/resource-id: deployment
  annotations:
    thaitype.dev/kubricate/stack-name: SimpleAppStack
    thaitype.dev/kubricate/resource-hash: d72073ca18c0629a7180764c50693d9bd7357d4e9773ab9771a1217b382f0a06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: my-app
          name: my-app
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: frontend
    thaitype.dev/kubricate/resource-id: service
  annotations:
    thaitype.dev/kubricate/stack-name: SimpleAppStack
    thaitype.dev/kubricate/resource-hash: 63f2925ed6296dd89f7f35c62538d6e579413cb40699fa321fb8c64a953f8aee
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Resource') > should generate expected files > generate-output-resource/output/frontend/Deployment_deployment.yml 1`] = `
"apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: frontend
    thaitype.dev/kubricate/resource-id: deployment
  annotations:
    thaitype.dev/kubricate/stack-name: SimpleAppStack
    thaitype.dev/kubricate/resource-hash: d72073ca18c0629a7180764c50693d9bd7357d4e9773ab9771a1217b382f0a06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: my-app
          name: my-app
          ports:
            - containerPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Resource') > should generate expected files > generate-output-resource/output/frontend/Service_service.yml 1`] = `
"apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: frontend
    thaitype.dev/kubricate/resource-id: service
  annotations:
    thaitype.dev/kubricate/stack-name: SimpleAppStack
    thaitype.dev/kubricate/resource-hash: 63f2925ed6296dd89f7f35c62538d6e579413cb40699fa321fb8c64a953f8aee
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Resource') > should generate expected files > generate-output-resource/output/namespace/Namespace_namespace.yml 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: namespace
    thaitype.dev/kubricate/resource-id: namespace
  annotations:
    thaitype.dev/kubricate/stack-name: NamespaceStack
    thaitype.dev/kubricate/resource-hash: 446fa07a363d589aef6d97e7338f6d74f9fd397d9cec5209be5fd4b2b26bd3e0
---
"
`;

exports[`CLI Integration ('Output Mode: Stack') > should generate expected files > generate-output-stack/output/frontend.yml 1`] = `
"apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: frontend
    thaitype.dev/kubricate/resource-id: deployment
  annotations:
    thaitype.dev/kubricate/stack-name: SimpleAppStack
    thaitype.dev/kubricate/resource-hash: d72073ca18c0629a7180764c50693d9bd7357d4e9773ab9771a1217b382f0a06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: my-app
          name: my-app
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: frontend
    thaitype.dev/kubricate/resource-id: service
  annotations:
    thaitype.dev/kubricate/stack-name: SimpleAppStack
    thaitype.dev/kubricate/resource-hash: 63f2925ed6296dd89f7f35c62538d6e579413cb40699fa321fb8c64a953f8aee
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Stack') > should generate expected files > generate-output-stack/output/namespace.yml 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    thaitype.dev/kubricate: "true"
    thaitype.dev/kubricate/stack-id: namespace
    thaitype.dev/kubricate/resource-id: namespace
  annotations:
    thaitype.dev/kubricate/stack-name: NamespaceStack
    thaitype.dev/kubricate/resource-hash: 446fa07a363d589aef6d97e7338f6d74f9fd397d9cec5209be5fd4b2b26bd3e0
---
"
`;
